--- a/categories.html
+++ b/categories.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="home_page.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="books.html">Books</a></li>
         <li><a href="categories.html" class="active">Categories</a></li>
         <li><a href="contact.html">Contact</a></li>
