--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     
     <nav>
       <ul>
-        <li><a href="home_page.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="books.html">Books</a></li>
         <li><a href="categories.html">Categories</a></li>
         <li><a href="contact.html" class="active">Contact</a></li>
