--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
     <nav>
       <ul>
-        <li><a href="home_page.html" class="active">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="books.html">Books</a></li>
         <li><a href="categories.html">Categories</a></li>
         <li><a href="contact.html">Contact</a></li>
