--- a/books.html
+++ b/books.html
@@ -36,6 +36,16 @@
         <h3>PPS</h3>
         <p>Rajiv Khana</p>
       </div>
+      <div class="book-card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSafvB9ziCiXvF1sy_SmSpw8ZT5SFqyLSg6uA&s" alt="Book Cover">
+        <h3>Engineering Physics</h3>
+        <p>SK Srisvasta</p>
+      </div>
+      <div class="book-card">
+        <img src="https://rukminim2.flixcart.com/image/300/300/book/3/9/7/basic-electrical-engineering-for-aktu-sem-i-ii-common-cbcs-original-imaeht84zd7p9azm.jpeg" alt="Book Cover">
+        <h3>Electrical Engineering</h3>
+        <p>UA Bakshi</p>
+      </div>
     </div>
   </section>
 
