--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <section class="h">
     <div class="t">
       <h1>DRISHTI Library</h1>
-      <p>In the world of questions find your right answer<br>Books related to AKTU Exams</p>
+      <p>Place where you find yourself<br>Books related to AKTU Exams</p>
      
     </div>
     <div class="i">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRMDGO8ofo2Feey6f49_sPNUEikQbvGGJjtTw&s" alt="Books illustration">
+      <img src="https://plus.unsplash.com/premium_photo-1703701579660-8481915a7991?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGJvb2tzdG9yZXxlbnwwfHwwfHx8MA%3D%3D" alt="Books illustration">
     </div>
   </section>
   <section class="rules">
