--- a/categories.html
+++ b/categories.html
@@ -28,6 +28,12 @@
       <div class="card">
         🚀 <h3>Sci-Fiction</h3>
       </div>
+      <div class="card">
+        📒 <h3>Story</h3>
+      </div>
+      <div class="card">
+        ❤️ <h3>Love</h3>
+      </div>
       
       
       <div class="card">
